--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ body {
 .header {
   display: flex;
   align-items: center;
-  padding: 112px 200px;
+  padding: 112px 160px;
   gap: 48px;
   justify-content: space-between;
 }
@@ -29,7 +29,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 16px 200px;
+  padding: 16px 160px;
 }
 
 ul {
@@ -45,7 +45,7 @@ ul {
 .menu {
   display: flex;
   align-items: center;
-  gap: 16px;
+  gap: 24px;
 }
 
 a {
@@ -86,21 +86,71 @@ h1 {
   margin: 0;
 }
 
-img {
-  max-height: 203px;
+h2 {
+  font-size: 36px;
+  color: #1f2937;
+  padding: 48px 0;
+  margin: 0;
+  text-align: center;
+}
+
+h3 {
+  font-size: 18px;
+  color: #f9faf8;
+}
+
+.header-image {
+  max-width: 310px;
   width: auto;
+  object-fit: cover;
 }
 
 .button-signup {
   padding-top: 8px;
 }
 
-p {
+.left-header p {
   font-size: 18px;
   color: #e5e7eb;
 }
 
-h3 {
+.right-header {
+  align-self: stretch;
+}
+
+.picture img {
+  width: 150px;
+  height: 150px;
+  border-radius: 16px;
+  border: 4px solid #3882f6;
+  margin: 0;
+  padding: 0;
+  object-fit: cover;
+}
+
+.pictures {
+  display: flex;
+  gap: 40px;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.second-section {
+  width: 100%;
+  padding-bottom: 100px;
+}
+
+.pictures p {
   font-size: 18px;
-  color: #f9faf8;
+  color: #1f2937;
+  text-align: center;
+  width: 145px;
+  margin: 0;
+  padding: 0;
+}
+
+.third-section {
+  width: 100%;
+  height: 400px;
+  background-color: #e5e7eb;
 }
