--- a/styles.css
+++ b/styles.css
@@ -150,7 +150,31 @@ h3 {
 }
 
 .third-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   width: 100%;
   height: 400px;
   background-color: #e5e7eb;
+}
+
+.third-section p {
+  font-size: 32px;
+  font-style: italic;
+  font-weight: 100;
+  color: #1f2937;
+  width: 620px;
+  margin: 0;
+  padding: 0;
+}
+
+p.author {
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.quote-container {
+  display: flex;
+  flex-direction: column;
 }
