--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,7 @@ p {
   color: white;
 }
 
-button {
+#signup1 {
   padding: 8px 32px;
   background-color: #3882f6;
   color: white;
@@ -159,7 +159,7 @@ h3 {
   font-size: 28px;
   font-style: italic;
   color: #1f2937;
-  width: 680px;
+  max-width: 680px;
   margin: 0;
   padding: 0;
 }
@@ -170,4 +170,41 @@ p.author {
   font-style: normal;
   text-align: right;
   padding-right: 24px;
+  width: 680px;
+}
+
+.fourth-section {
+  padding: 100px 0;
+}
+
+.container-fourth-section {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #3882f6;
+  padding: 50px 100px;
+  min-width: 850px;
+  border-radius: 10px;
+}
+
+.fourth-1st p {
+  margin: 0;
+  padding: 2px 0;
+  font-size: 14px;
+}
+
+#signup2 {
+  background-color: #3882f6;
+  color: white;
+  border-radius: 8px;
+  border-color: white;
+  border: 2px solid;
+  font-weight: bold;
+  height: 31px;
+  width: 113px;
+}
+
+p.calltoaction {
+  font-weight: bold;
+  font-size: 20px;
 }
