--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,7 @@ body {
   gap: 48px;
   max-width: var(--mw);
   margin: 165px auto 112px auto;
+  flex-wrap: wrap;
 }
 
 .left-header {
@@ -39,6 +40,8 @@ body {
   border-radius: 8px;
   background: url(images/header-image.jpg) center;
   background-size: cover;
+  min-width: 240px;
+  min-height: 228px;
 }
 
 .header-image {
