--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,7 @@ body {
   position: fixed;
   background-color: #1f2937d4;
   backdrop-filter: blur(30px);
+  z-index: 1;
 }
 
 .menu-container {
@@ -75,6 +76,9 @@ ul {
   font-weight: 600;
 }
 
+.menu li a:hover {
+  color: #3882f6;
+}
 .logo {
   max-height: 50px;
 }
@@ -88,6 +92,7 @@ ul {
 a {
   text-decoration: none;
   color: #e5e7eb;
+  transition: 0.3s ease-in-out;
 }
 
 .container-first-section {
