--- a/styles.css
+++ b/styles.css
@@ -325,6 +325,18 @@ button {
     cursor: pointer;
   }
 
+  .hamburger.active .bar:nth-child(2) {
+    opacity: 0;
+  }
+
+  .hamburger.active .bar:nth-child(1) {
+    transform: translateY(6px) rotate(45deg);
+  }
+
+  .hamburger.active .bar:nth-child(3) {
+    transform: translateY(-6px) rotate(-45deg);
+  }
+
   li:nth-child(3) {
     margin-bottom: 16px;
   }
